<resources>
    <string name="app_name">Lista Fácil App</string>
    <string name="novo">Novo</string>
    <string name="excluirtodos">Excluir Todos</string>
    <string name="title_activity_nova_lista_compras">Lista Fácil App</string>
    <string name="action_settings">Settings</string>
    <string name="lblNovaLista">Nova lista de compras:</string>
    <string name="titleNovaLista">Nova lista</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnSalvar">Salvar</string>
    <string name="lblDataLista">Data da compra:</string>

    <string name="novo_item">+ item</string>
    <string name="title_activity_novo_item_da_lista">Novo item</string>
    <string name="title_activity_itens_da_lista">Itens</string>
    <string name="nome_item">Nome do item</string>
    <string name="qtde">Qtde</string>
    <string name="unitario">Unitário</string>
    <string name="voz">Voz</string>
    <string name="vozHelp">Fale os itens e a cada novo item fale "mais"</string>
    <string name="onde_comprar">Onde comprar</string>
    <string name="vc_esta_aqui">Você</string>
    <string name="title_activity_onde_comprar">Onde comprar</string>
    <string name="excluir">Excluir</string>
    <string name="totalLista">%1$s itens totalizando %2$s</string>
    <string name="totalItens">%1$s itens</string>
    <string name="marcadoOk">Marcado como OK</string>
    <string name="marcadoNaoOk">Marcado como pendente</string>

</resources>
